2003-07-18  MINAMI Hirokazu  <minami@mistfall.net>

	* x_dnd.c: tweaked mime-type preference order.

2003-07-17  MINAMI Hirokazu  <minami@mistfall.net>

	* x_dnd.c: fixed bugs in the parsing of configuration protocol.

2003-07-17  Seiichi SATO  <ssato@sh.rim.or.jp>

	* Started porting to MS Windows.

	* kik_dlfcn.c: Removed.

	* kik_dlfcn_dl.c: Taken from kik_dlfcn.c. (dlopen() in libdl)

	* kik_dlfcn_dld.c: Taken from kik_dlfcn.c. (shl_load() of HP-UX)

	* kik_dlfcn_dyld.c: Added for Mac OS X. (not written yet)

	* kik_dlfcn_win32.c: Added for Windows. (native Win32 and Cygwin)

	* kik_dlfcn_none.c: Dummy functions.

	* kik_pty_win32.c: Dummy functions.

	* kik_unistd.c (kik_usleep): Replaced usleep() with Sleep() in Win32API.

	* kiklib/configure.in: Added AC_CANONICAL_TARGET and cleaned up.

	* mkf/configure.in: Added AC_CANONICAL_HOST and AC_CANONICAL_TARGET.

2003-07-17  Seiichi SATO  <ssato@sh.rim.or.jp>

	* kik_pty_streams.c: slave -> *slave (line 243)

2003-07-14  Seiichi SATO  <ssato@sh.rim.or.jp>

	* Applied a keypad patch from Mike Fabian.

2003-07-14  Araki Ken  <arakiken@users.sf.net>

	* Bidi characters in backward-scrolled area were not correctly
	  selected. Fixed.

	* The end characters of lines in backward-scrolled area couldn't
	  be selected. Fixed.

2003-07-13  Seiichi SATO  <ssato@sh.rim.or.jp>

	* Added "lang" and "country" into map_ucs4_to_func_table struct instead
	  of "locale", and get_map_ucs4_to_func_for_current_locale() function
	  was changed to select UCS mapping table by sys_lang and sys_coutry.
	  Probably it is useful, if your system have no posix locale mechanism,
	  or broken one such as old UN*X and Mac OS X.
	  (Thanks to Aida Shinra san for sending a patch)

2003-07-13  Seiichi SATO  <ssato@sh.rim.or.jp>

	* kik_config.h.in: Added gid_t. It is required on some platforms, and
	  defined by AC_TYPE_UID_T.
	
	* kiklib/configure.in: Cleaned up platform dependent stuff.

2003-07-09  Araki Ken  <arakiken@users.sf.net>
